# hyprsymbol

./: .gitignore  Makefile  README.md  hyprsymbol  meson.build  scan
include/hyprsymbol/: handlers.h  hyprsymbol.h  renderer.h  shm.h  utils.h
src/: globals.c  globals.h  handlers.c  handlers.h  hyprsymbol.c  hyprsymbol.h  listeners.c  listeners.h  main.c  renderer.c  shm.c
